# hundred-crayfish-legion

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
agents/: README.md
core/: Cargo.toml
core/examples/: swarm_tokio.rs
core/src/: lib.rs  scheduler.rs
docs/: AXIUM_UPLIFT_PREREQUISITES.md  README.md  github-issue-p1-baseline-2026-04-24.md  github-issue-p2-elastic-2026-04-24.md
docs/issue-exports/: axium-daily-body-en.md  axium-daily-comment-zh.md  p1-body-en.md  p1-comment-zh.md  p2-body-en.md  p2-comment-zh.md  p2-easter-live-validation-2026-04-28-body.md  xian-daily-2026-05-07-body.md  xian-daily-2026-05-07-title.txt  xian-mainline-baseline-2026-05-06-body.md  xian-mainline-baseline-2026-05-06-title.txt
docs/issue-registry/: 2026-04-24-p1-p2-axium.md
examples/: swarm_demo.py
protocols/: README.md
python/: requirements-carbon-silicon.txt
python/carbon_silicon_universe/: __init__.py  __main__.py  alliance_layers.py  api_app.py  autonomous_cortex.py  confirm_config.py  confirm_sync.py  p1_info.py  runtime_log.py
python/carbon_silicon_universe/static/p1/: index.html
python/tests/: test_p1_health.py  test_p2_easter.py
scripts/: close_github_issues.ps1  finalize_axium_github_issue.ps1  healthcheck.ps1  healthcheck.sh  publish_p1_p2_github_issues.ps1  publish_p2_easter_validation_issue.ps1  publish_xian_baseline_issue_2026_05_06.ps1  publish_xian_daily_issue_2026_05_07.ps1  run-genesis-n-rounds.sh  verify-p2-easter.ps1
