[package]
name = "hcl-core"
version = "0.1.0"
edition = "2021"
description = "Hundred Crayfish Legion – P1 cluster kernel (Tokio crayfish swarm + future gRPC)"
license = "MIT"

[lib]
name = "hcl_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
